# LT

./: .gitignore  README.md  config.ini  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  translator.py
.github/: .secretlintrc.json
.github/workflows/: secretlint.yml
LT-main/src/core/: universal_translator.py
LT-main/src/lt/: translator.py
LT-main/tests/: test_sample.rst
LT-main/tests/translations/zh_CN/: test_sample.md
src/: __init__.py  config_manager.py  llm_factory.py  markdown_parser.py  summary_generator.py  text_chunker.py  translation_agent.py  translator.py
src/core/: __init__.py  document_processor.py  markdown_document_processor.py  markdown_parser.py  rst_processor.py  summary_generator.py  text_chunker.py  translation_agent.py  translator.py  universal_translator.py
src/lt/: translator.py
src/utils/: __init__.py  config.py  llm_factory.py
tests/: ldm_focused_retranslation.md  ldm_focused_retranslation.stats.json  ldm_translated.md  ldm_translated.stats.json  test_llm.py
tests/translations/zh_CN/: quickly-build-trimmed-linux.md
