[project]
name = "LT"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "TurtleRuss", email = "tttturtleruss@gmail.com"},
]
dependencies = [
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-community>=0.2.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "tiktoken>=0.7.0",
    "markdown>=3.6",
    "click>=8.1.7",
    "tqdm>=4.66.0",
    "openai>=1.32.0",
    "transformers>=4.41.2",
    "Sphinx>=7.3.7",
    "r2pipe>=1.9.2",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "GPL-only-v3.0"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
test = "python main.py --model qwen-plus --provider qwen translate tests/ldm.md -o tests/ldm_translated.md"
